# laughing-octo-winner

./: Cargo.toml  test.html
examples/: html2term.rs  html2text.rs
src/: ansi_colours.rs  lib.rs  tempCodeRunnerFile.rs  tests.rs
src/render/: mod.rs  tempCodeRunnerFile.rs  text_renderer.rs
